--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume Boichuk Volodymyr</title>
     <link rel="icon" href="img/icon/portrait.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/google-fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -46,82 +45,84 @@
                     <div>
                         <div>
                             <p class="titilium-blue-h3">FULL NAME</p>
-                            <p class="roboto-blue-h4">Volodymyr Boichuk</p>
+                            <p class="roboto-blue">Volodymyr Boichuk</p>
                         </div>
-                        <img src="img/icon/portrait.png" alt="portrait">
+                        <img class="logo" src="img/icon/portrait.png" alt="portrait">
                     </div>
                     <div>
                         <div>
                             <p class="titilium-blue-h3">BIRTHDAY</p>
-                            <p class="roboto-blue-h4">17 May, 1995</p>
+                            <p class="roboto-blue">17 May, 1995</p>
                         </div>
-                        <img src="img/icon/gift.png" alt="gift">
+                        <img class="logo" src="img/icon/gift.png" alt="gift">
                     </div>
                     <div>
                         <div>
                             <p class="titilium-blue-h3">BIRTH PLACE</p>
-                            <p class="roboto-blue-h4">Potochany, Ternopil, Ukraine</p>
+                            <p class="roboto-blue">Potochany, Ternopil, <br>Ukraine</p>
                         </div>
-                        <img src="img/icon/location.png" alt="location">
+                        <img class="logo" src="img/icon/location.png" alt="location">
                     </div>
                 </aside>
                 <aside>
                     <img id="face" src="img/face.jpg" alt="Volodymyr Boichuk">
                 </aside>
-                <aside>
-                    <div id="about-right-column">
+                <aside id="about-right-column">
+                    <div>
+                        <img class="logo" src="img/icon/location.png" alt="location-2">
                         <div>
-                            <img class="logo" src="img/icon/location.png" alt="location-2">
-                            <div>
-                                <p class="titilium-blue-h3">ADDRESS</p>
-                                <p class="roboto-blue-h4">Ternopil, Ukraine</p>
-                            </div>
+                            <p class="titilium-blue-h3">ADDRESS</p>
+                            <p class="roboto-blue">Ternopil, Ukraine</p>
                         </div>
+                    </div>
+                    <div>
+                        <img class="logo" src="img/icon/phone.png" alt=phone>
                         <div>
-                            <img class="logo" src="img/icon/phone.png" alt=phone>
-                            <div>
-                                <p class="titilium-blue-h3">PHONE</p>
-                                <p class="roboto-blue-h4">+380987076795</p>
-                            </div>
+                            <p class="titilium-blue-h3">PHONE</p>
+                            <p class="roboto-blue">+380987076795</p>
                         </div>
+                    </div>
+                    <div>
+                        <img class="logo" src="img/icon/contact.png" alt="contact">
                         <div>
-                            <img class="logo" src="img/icon/contact.png" alt="contact">
-                            <div>
-                                <p class="titilium-blue-h3">EMAIL ADDRESS</p>
-                                <p class="roboto-blue-h4">rilhad1@gmail.com</p>
-                            </div>
+                            <p class="titilium-blue-h3">EMAIL ADDRESS</p>
+                            <p class="roboto-blue">rilhad1@gmail.com</p>
                         </div>
-                    </div>    
+                    </div>
                 </aside>
-                </div>
+            </div>
         </section>
 
-        <!--    <section id="get-in-touch">-->
-        <!--        <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>-->
-        <!--        <form action="#contact"><input type="submit" value="Send"></form>-->
-        <!--    </section>-->
-        <!--    <section id="skills">-->
-        <!--        <h2 class="lato-blue-h2">SKILLS</h2>-->
-        <!--        <div class="skills"><img src="img/skills/html.png" alt="html-ico">-->
-        <!--            <p>HTML5</p>-->
-        <!--        </div>-->
-        <!--        <div class="skills"><img src="img/skills/css.png" alt="css-ico">-->
-        <!--            <p>CSS3</p>-->
-        <!--        </div>-->
-        <!--        <div class="skills"><img src="img/skills/js.png" alt="javascript-ico">-->
-        <!--            <p>JavaScript</p>-->
-        <!--        </div>-->
-        <!--        <div class="skills"><img src="img/skills/wordpress.png" alt="wordpress-ico">-->
-        <!--            <p>WordPress</p>-->
-        <!--        </div>-->
-        <!--        <div class="skills"><img src="img/skills/ps.png" alt="photoshop-ico">-->
-        <!--            <p>Photoshop</p>-->
-        <!--        </div>-->
-        <!--    </section>-->
-        <!--    <section id="process">-->
-        <!--        <h2 class="titilium-white-h2">PROCESS</h2>-->
-        <!--        <img src="img/process.jpg" alt="prosecc">-->
-        <!--    </section>-->
+        <section id="get-in-touch">
+            <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>
+            <form action="#contact">
+                <input type="submit" value="Send">
+            </form>
+        </section>
+        <section id="skills">
+            <h2 class="lato-blue-h2">SKILLS</h2>
+            <div>
+                <div class="skills"><img src="img/skills/html.png" alt="html-ico">
+                    <p>HTML5</p>
+                </div>
+                <div class="skills"><img src="img/skills/css.png" alt="css-ico">
+                    <p>CSS3</p>
+                </div>
+                <div class="skills"><img src="img/skills/js.png" alt="javascript-ico">
+                    <p>JavaScript</p>
+                </div>
+                <div class="skills"><img src="img/skills/wordpress.png" alt="wordpress-ico">
+                    <p>WordPress</p>
+                </div>
+                <div class="skills"><img src="img/skills/ps.png" alt="photoshop-ico">
+                    <p>Photoshop</p>
+                </div>
+            </div>
+        </section>
+            <!--<section id="process">-->
+            <!--    <h2 class="titilium-white-h2">PROCESS</h2>-->
+            <!--    <img src="img/process.jpg" alt="prosecc">-->
+            <!--</section>-->
 
         <!--    <section id="education">-->
         <!--        <h2 class="lato-blue-h2">EDUCATION</h2>-->
