--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="get-in-touch">
             <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>
             <form action="#contact">
-                <input type="submit" value="Send">
+                <input type="submit" value="Get in touch">
             </form>
         </section>
         <section id="skills">
@@ -119,26 +119,26 @@
                 </div>
             </div>
         </section>
-            <!--<section id="process">-->
-            <!--    <h2 class="titilium-white-h2">PROCESS</h2>-->
-            <!--    <img src="img/process.jpg" alt="prosecc">-->
-            <!--</section>-->
+        <section id="process">
+            <h2 class="titilium-white-h2">PROCESS</h2>
+            <img src="img/process.jpg" alt="prosecc">
+        </section>
 
-        <!--    <section id="education">-->
-        <!--        <h2 class="lato-blue-h2">EDUCATION</h2>-->
-        <!--        <p class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</p>-->
-        <!--        <p class="roboto-blue-h4">Ternopil National Economic University</p>-->
-        <!--        <p class="titilium-blue-h3">Sep 2012 - Jun 2016</p>-->
-        <!--        <p class="titilium-blue-h3">COMPUTER ENGINEERING</p>-->
-        <!--        <p class="roboto-blue-h4">Ternopil National Economic University</p>-->
-        <!--        <p class="titilium-blue-h3">Sep 2016 - Feb 2018</p>-->
-        <!--        <p class="titilium-blue-h3">CS50</p>-->
-        <!--        <p class="roboto-blue-h4">Prometeus</p>-->
-        <!--        <p class="titilium-blue-h3">Apr 2017 - Jul 2017</p>-->
-        <!--        <p class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</p>-->
-        <!--        <p class="roboto-blue-h4">SoftServe</p>-->
-        <!--        <p class="titilium-blue-h3">Aug 2017 - Sep 2017</p>-->
-        <!--    </section>-->
+            <section id="education">
+                <h2 class="lato-blue-h2">EDUCATION</h2>
+                <p class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</p>
+                <p class="roboto-blue-h4">Ternopil National Economic University</p>
+                <p class="titilium-blue-h3">Sep 2012 - Jun 2016</p>
+                <p class="titilium-blue-h3">COMPUTER ENGINEERING</p>
+                <p class="roboto-blue-h4">Ternopil National Economic University</p>
+                <p class="titilium-blue-h3">Sep 2016 - Feb 2018</p>
+                <p class="titilium-blue-h3">CS50</p>
+                <p class="roboto-blue-h4">Prometeus</p>
+                <p class="titilium-blue-h3">Apr 2017 - Jul 2017</p>
+                <p class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</p>
+                <p class="roboto-blue-h4">SoftServe</p>
+                <p class="titilium-blue-h3">Aug 2017 - Sep 2017</p>
+            </section>
 
         <!--    <section id="certificate">-->
         <!--        <h2 class="titilium-white-h2">CERTIFICATE</h2>-->
