--- a/index.html
+++ b/index.html
@@ -124,69 +124,101 @@
             <img src="img/process.jpg" alt="prosecc">
         </section>
 
-            <section id="education">
-                <h2 class="lato-blue-h2">EDUCATION</h2>
-                <p class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</p>
-                <p class="roboto-blue-h4">Ternopil National Economic University</p>
-                <p class="titilium-blue-h3">Sep 2012 - Jun 2016</p>
-                <p class="titilium-blue-h3">COMPUTER ENGINEERING</p>
-                <p class="roboto-blue-h4">Ternopil National Economic University</p>
-                <p class="titilium-blue-h3">Sep 2016 - Feb 2018</p>
-                <p class="titilium-blue-h3">CS50</p>
-                <p class="roboto-blue-h4">Prometeus</p>
-                <p class="titilium-blue-h3">Apr 2017 - Jul 2017</p>
-                <p class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</p>
-                <p class="roboto-blue-h4">SoftServe</p>
-                <p class="titilium-blue-h3">Aug 2017 - Sep 2017</p>
-            </section>
+        <section id="education">
+            <h2 class="lato-blue-h2">EDUCATION</h2>
+            <div>
+                <div>
+                    <div>
+                        <p class="titilium-blue-h3">COMPUTER SYSTEM AND NETWORKS</p>
+                        <p class="roboto-blue">Ternopil National Economic University</p>
+                    </div>
+                    <p class="titilium-blue-h3">Sep 2012 - Jun 2016</p>
+                </div>
+                <div>
+                    <div>
+                        <p class="titilium-blue-h3">COMPUTER ENGINEERING</p>
+                        <p class="roboto-blue">Ternopil National Economic University</p>
+                    </div>
+                    <p class="titilium-blue-h3">Sep 2016 - Feb 2018</p>
+                </div>
+                <div>
+                    <div>
+                        <p class="titilium-blue-h3">CS50</p>
+                        <p class="roboto-blue">Prometeus</p>
+                    </div>
+                    <p class="titilium-blue-h3">Apr 2017 - Jul 2017</p>
+                </div>
+                <div>
+                    <div>
+                        <p class="titilium-blue-h3">HTML5/ CSS3/ JavaScript Fundamentals</p>
+                        <p class="roboto-blue">SoftServe</p>
+                    </div>
+                    <p class="titilium-blue-h3">Aug 2017 - Sep 2017</p>
+                </div>
+            </div>
+        </section>
 
-        <!--    <section id="certificate">-->
-        <!--        <h2 class="titilium-white-h2">CERTIFICATE</h2>-->
-        <!--        <div class="certificate">-->
-        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
-        <!--            <p>CERTIFICATE TITLE</p>-->
-        <!--            <p>COMPANY NAME</p>-->
-        <!--            <p>APRIL 2014</p>-->
-        <!--        </div>-->
-        <!--        <div class="certificate">-->
-        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
-        <!--            <p>CERTIFICATE TITLE</p>-->
-        <!--            <p>COMPANY NAME</p>-->
-        <!--            <p>APRIL 2014</p>-->
-        <!--        </div>-->
-        <!--        <div class="certificate">-->
-        <!--            <img src="img/certificate/certificate.jpg" alt="certificate">-->
-        <!--            <p>CERTIFICATE TITLE</p>-->
-        <!--            <p>COMPANY NAME</p>-->
-        <!--            <p>APRIL 2014</p>-->
-        <!--        </div>-->
-        <!--    </section>-->
+        <section id="certificate">
+            <h2 class="titilium-white-h2">CERTIFICATE</h2>
+            <div>
+                <div class="certificate">
+                    <img src="img/certificate/certificate.jpg" alt="certificate">
+                    <p>CERTIFICATE TITLE</p>
+                    <p>COMPANY NAME</p>
+                    <p>APRIL 2014</p>
+                </div>
+                <div class="certificate">
+                    <img src="img/certificate/certificate.jpg" alt="certificate">
+                    <p>CERTIFICATE TITLE</p>
+                    <p>COMPANY NAME</p>
+                    <p>APRIL 2014</p>
+                </div>
+                <div class="certificate">
+                    <img src="img/certificate/certificate.jpg" alt="certificate">
+                    <p>CERTIFICATE TITLE</p>
+                    <p>COMPANY NAME</p>
+                    <p>APRIL 2014</p>
+                </div>
+            </div>
+        </section>
 
-        <!--    <section id="portfolio">-->
-        <!--        <h2 class="lato-blue-h2">PORTFOLIO</h2>-->
-        <!--        <div><img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1"> </div>-->
-        <!--        <div><img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2"> </div>-->
-        <!--        <div><img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3"> </div>-->
-        <!--        <div><img src="img/portfolio/portfolio-4.jpg" alt="portfolio-4"> </div>-->
-        <!--        <div><img src="img/portfolio/portfolio-5.jpg" alt="portfolio-5"> </div>-->
-        <!--        <div><img src="img/portfolio/portfolio-6.jpg" alt="portfolio-6"> </div>-->
-        <!--    </section>-->
-        <!--</main>-->
-        <!--<footer>-->
-        <!--    <div id="contact">-->
-        <!--        <h2 class="titilium-white-h2">CONTACT US</h2>-->
-        <!--        <h3 class="titilium-white-h3">WE ARE READY TO WORK WITH YOU</h3>-->
-        <!--        <form method="POST" action="https://formspree.io/rilhad1@gmail.com">-->
-        <!--            <input type="text" placeholder="Name" required><br>-->
-        <!--            <input type="email" placeholder="E-mail" required><br>-->
-        <!--            <textarea placeholder="Message"></textarea><br>-->
-        <!--            <input type="submit" value="Send">-->
-        <!--        </form>-->
-        <!--    </div>-->
-        <!--    <div id="map">-->
-        <!--        <img src="img/map.jpg" alt="map">-->
-        <!--    </div>-->
-        <!--</footer>-->
+        <section id="portfolio">
+            <h2 class="lato-blue-h2">PORTFOLIO</h2>
+            <div>
+                <img src="img/portfolio/portfolio-1.jpg" alt="portfolio-1">
+            </div>
+            <!--<div>-->
+            <!--    <img src="img/portfolio/portfolio-2.jpg" alt="portfolio-2">-->
+            <!--</div>-->
+            <!--<div>-->
+            <!--    <img src="img/portfolio/portfolio-3.jpg" alt="portfolio-3">-->
+            <!--</div>-->
+            <!--<div>-->
+            <!--    <img src="img/portfolio/portfolio-4.jpg" alt="portfolio-4">-->
+            <!--</div>-->
+            <!--<div>-->
+            <!--    <img src="img/portfolio/portfolio-5.jpg" alt="portfolio-5">-->
+            <!--</div>-->
+            <!--<div>-->
+            <!--    <img src="img/portfolio/portfolio-6.jpg" alt="portfolio-6">-->
+            <!--</div>-->
+        </section>
+    </main>
+    <footer>
+        <div id="contact">
+            <h2 class="titilium-white-h2">CONTACT US</h2>
+            <h3 class="titilium-white-h3">WE ARE READY TO WORK WITH YOU</h3>
+            <form method="POST" action="https://formspree.io/rilhad1@gmail.com">
+                <input type="text" placeholder="Name" required><br>
+                <input type="email" placeholder="E-mail" required><br>
+                <textarea placeholder="Message"></textarea><br>
+                <input type="submit" value="Send">
+            </form>
+        </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3078.3189323947786!2d25.551693905309186!3d49.54969463556595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036d9a0926371%3A0x432629339cb17e92!2z0JHQtdGA0LXQttCw0L3RgdGM0LrQsCDQstGD0LvQuNGG0Y8sIDQ5LCDQotC10YDQvdC-0L_RltC70YwsINCi0LXRgNC90L7Qv9GW0LvRjNGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1503691465360" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </footer>
 
 </body>
 
