--- a/index.html
+++ b/index.html
@@ -216,13 +216,12 @@
             </form>
         </div>
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3078.3189323947786!2d25.551693905309186!3d49.54969463556595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036d9a0926371%3A0x432629339cb17e92!2z0JHQtdGA0LXQttCw0L3RgdGM0LrQsCDQstGD0LvQuNGG0Y8sIDQ5LCDQotC10YDQvdC-0L_RltC70YwsINCi0LXRgNC90L7Qv9GW0LvRjNGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1503691465360"  allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3078.3189323947786!2d25.551693905309186!3d49.54969463556595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036d9a0926371%3A0x432629339cb17e92!2z0JHQtdGA0LXQttCw0L3RgdGM0LrQsCDQstGD0LvQuNGG0Y8sIDQ5LCDQotC10YDQvdC-0L_RltC70YwsINCi0LXRgNC90L7Qv9GW0LvRjNGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1503691465360"
+                allowfullscreen></iframe>
         </div>
     </footer>
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/smooth.js"></script>
 
 </body>
