--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume Boichuk Volodymyr</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">-->
     <link rel="icon" href="img/icon/portrait.png" type="image/x-icon">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="what.css">
-
 </head>
 
 <body>
     <header>
-
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,22 +20,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#home">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#home">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#about">ABOUT <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#about">ABOUT <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#skills">SKILLS <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#skills">SKILLS <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#education">EDUCATION <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#education">EDUCATION <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#portfolio">PORTFOLIO <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#portfolio">PORTFOLIO <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link style_prevu_kit" href="#contact">CONTACT <span class="sr-only">(current)</span></a>
+                        <a class="nav-link zoom-in" href="#contact">CONTACT <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
@@ -51,19 +47,18 @@
             <h2>BOICHIK VOLODYMYR</h2>
             <div id="social-icons">
                 <div>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/facebook.png" alt="facebook"></a>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/skype.png" alt="skype"></a>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/twitter.png" alt="twitter"></a>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/mail.png" alt="mail"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/facebook.png" alt="facebook"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/skype.png" alt="skype"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/twitter.png" alt="twitter"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/mail.png" alt="mail"></a>
                 </div>
                 <div>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/linkedin.png" alt="linkedin"></a>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/youtube.png" alt="youtube"></a>
-                    <a href="#"><img class="style_prevu_kit social-icons" src="img/icon/google.png" alt="google"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/linkedin.png" alt="linkedin"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/youtube.png" alt="youtube"></a>
+                    <a href="#"><img class="zoom-in social-icons" src="img/icon/google.png" alt="google"></a>
                 </div>
             </div>
         </section>
-
         <section id="about">
             <h2 class=" lato-blue-h2">ABOUT</h2>
             <div>
@@ -118,7 +113,6 @@
                 </aside>
             </div>
         </section>
-
         <section id="get-in-touch">
             <h2 class="titilium-white-h2">LET'S TALK ABOUT YOUR NEW PROJECT</h2>
             <form action="#contact">
@@ -149,7 +143,6 @@
             <h2 class="titilium-white-h2">PROCESS</h2>
             <img src="img/process.jpg" alt="prosecc">
         </section>
-
         <section id="education">
             <h2 class="lato-blue-h2">EDUCATION</h2>
             <div>
@@ -183,59 +176,57 @@
                 </div>
             </div>
         </section>
-
-    <section id="certificate">
-        <h2 class="titilium-white-h2">CERTIFICATE</h2>
-        <div>
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <div class="infos_bloc">
-                            <a href="#" class="content" border="0">
+        <section id="certificate">
+            <h2 class="titilium-white-h2">CERTIFICATE</h2>
+            <div>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="infos_bloc">
+                                <a href="#" class="content">
                               <img class="d-block img-fluid" src="img/certificate/certificate-1.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
                               <span>YOUR TEXT HERE</span>
                             </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                         <div class="infos_bloc">
-                            <a href="#" class="content" border="0">
+                        <div class="carousel-item">
+                            <div class="infos_bloc">
+                                <a href="#" class="content" >
                               <img class="d-block img-fluid" src="img/certificate/certificate-2.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
                               <span>YOUR TEXT HERE</span>
                             </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                         <div class="infos_bloc">
-                            <a href="#" class="content" border="0">
+                        <div class="carousel-item">
+                            <div class="infos_bloc">
+                                <a href="#" class="content" >
                               <img class="d-block img-fluid" src="img/certificate/certificate-3.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
                               <span>YOUR TEXT HERE</span>
                             </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span></a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span></a>
+                </div>
             </div>
-        </div>
-    </section>
-
+        </section>
         <section id="portfolio">
             <h2 class="lato-blue-h2">PORTFOLIO</h2>
             <div>
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-1.jpg" alt="portfolio-1">
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-2.jpg" alt="portfolio-2">
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-3.jpg" alt="portfolio-3">
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-4.jpg" alt="portfolio-4">
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-5.jpg" alt="portfolio-5">
-                <img class="style_prevu_kit shadow" src="img/portfolio/portfolio-6.jpg" alt="portfolio-6">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-1.jpg" alt="portfolio-1">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-2.jpg" alt="portfolio-2">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-3.jpg" alt="portfolio-3">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-4.jpg" alt="portfolio-4">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-5.jpg" alt="portfolio-5">
+                <img class="zoom-in shadow" src="img/portfolio/portfolio-6.jpg" alt="portfolio-6">
             </div>
         </section>
     </main>
@@ -254,7 +245,6 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3078.3189323947786!2d25.551693905309186!3d49.54969463556595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473036d9a0926371%3A0x432629339cb17e92!2z0JHQtdGA0LXQttCw0L3RgdGM0LrQsCDQstGD0LvQuNGG0Y8sIDQ5LCDQotC10YDQvdC-0L_RltC70YwsINCi0LXRgNC90L7Qv9GW0LvRjNGB0YzQutCwINC-0LHQu9Cw0YHRgtGM!5e0!3m2!1suk!2sua!4v1503691465360"
                 allowfullscreen></iframe>
         </div>
-
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
