--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                 <a href="#" class="content">
                               <img class="d-block img-fluid" src="img/certificate/certificate-1.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
-                              <span>YOUR TEXT HERE</span>
+                              <span>There should be a description of the certificate</span>
                             </a>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                 <a href="#" class="content" >
                               <img class="d-block img-fluid" src="img/certificate/certificate-2.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
-                              <span>YOUR TEXT HERE</span>
+                              <span>There should be a description of the certificate</span>
                             </a>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                                 <a href="#" class="content" >
                               <img class="d-block img-fluid" src="img/certificate/certificate-3.jpg" alt="First slide">
                               <div class="overlay_bloc"></div>
-                              <span>YOUR TEXT HERE</span>
+                              <span>There should be a description of the certificate</span>
                             </a>
                             </div>
                         </div>
@@ -221,12 +221,12 @@
         <section id="portfolio">
             <h2 class="lato-blue-h2">PORTFOLIO</h2>
             <div>
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-1.jpg" alt="portfolio-1">
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-2.jpg" alt="portfolio-2">
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-3.jpg" alt="portfolio-3">
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-4.jpg" alt="portfolio-4">
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-5.jpg" alt="portfolio-5">
-                <img class="zoom-in shadow" src="img/portfolio/portfolio-6.jpg" alt="portfolio-6">
+                <img class="zoom-in shadow" src="img/portfolio/port-1.jpg" alt="portfolio-1">
+                <img class="zoom-in shadow" src="img/portfolio/port-2.jpg" alt="portfolio-2">
+                <img class="zoom-in shadow" src="img/portfolio/port-3.jpg" alt="portfolio-3">
+                <img class="zoom-in shadow" src="img/portfolio/port-4.jpg" alt="portfolio-4">
+                <img class="zoom-in shadow" src="img/portfolio/port-5.jpg" alt="portfolio-5">
+                <img class="zoom-in shadow" src="img/portfolio/port-6.jpg" alt="portfolio-6">
             </div>
         </section>
     </main>
@@ -251,6 +251,7 @@
     <script type="text/javascript" src="js/smooth.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/navbar-shutdown.js"></script>
     <script type="text/javascript" src="js/form-ajax.js"></script>
 
 </body>
